--- a/public/index.html
+++ b/public/index.html
@@ -4,33 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Askyu</title>
+    <link rel="shortcut icon" href="./assets/AskyuLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Askyu</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Fale Conosco</a>
-              </li>
-            </ul>
+  </head>
+<body class="bg-body-tertiar" data-bs-theme="light" style="font-family: 'Readex Pro', sans-serif;">
+  <nav class="navbar bg-body-tertiary fixed-top navbar-expand-xl px-5-md px-1">
+    <div class="container-fluid px-5">
+      <a class="navbar-brand d-flex align-items-center p-2 px-5-md px-1" href="#"><img src="./assets/AskyuLogo.png" alt="Logo Askyu" width="100px"><p class="align-items-center my-auto">Askyu<br>Consultoria</p></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end px-5" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="./assets/AskyuLogo.png" alt="Logo Askyu" width="50px">Askyu Consultoria</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-5">
+            <li class="nav-item">
+              <a class="nav-link fs-5" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fs-5" href="#sobre-nos">Sobre Nós</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fs-5" href="#fale-conosco">Fale Conosco</a>
+            </li>
+            <li class="nav-item">
+              <div class="nav-link fs-6 form-check form-switch mx-2">
+                <input class="form-check-input" type="checkbox" role="switch" id="modo-escuro">
+                <label class="form-check-label" for="modo-escuro">Modo Escuro</label>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <main>
+    <section class="banners banner-1 d-flex flex-column justify-content-start" style="margin-top: 110px ;">
+      <div class="align-self-start banners-titulo px-5 d-flex flex-column" style="--bs-bg-opacity: .2;">
+        <h5 class="align-self-start" style="color: var(--roxo)">Seja bem vindo</h5>
+        <h2 class="fw-bold fs-1 text" style="max-width: 400px; text-align: start;">Transforme sua experiência digital </h2>
+        <h5 class="fs-3 text align-self-start" style="max-width: 300px; color:var(--verde); text-align:start">e simplifique seu sucesso</h5>
+      </div>
+    </section>
+
+    <section class="d-flex flex-column justify-content-start" style="padding-top: 5rem ;">
+      <div>
+      </div>
+      <div>
+        <div class="px-5 pb-4">
+          <h4 class="col-8 fs-2" style="color: var(--roxo)">Da estratégia à ação: nossa consultoria em prática</h4>
+          <p class="col-8 fs-4">Nossos serviços possibilitam que você se concentre no crescimento de seus negócios enquanto cuidamos das complicações e obstáculos da administração empresarial</p>
+        </div>
+        <div class="d-flex">
+          <div class="col-5 ps-5 "><img class="img-fluid" src="assets/people_1.png"></div>
+          <div class="d-flex flex-column gap-3 col-7 pe-3">
+            <div class="col-12 d-flex p-4 ms-2 me-2 shadow" style="background-color: var(--verde-escuro);border-radius: 10px; color: white;">Queremos te guiar pela jornada da tecnologia, revelando seu potencial transformador para impulsionar seu sucesso</div>
+            <div class="col-12 d-flex gap-5">
+              <div class="col-6 align-items-center">
+              
+                <div class="card mb-5 ms-5 shadow" style="border-left: .5rem var(--verde-escuro) solid;">
+                  <div class="row g-0">
+                    <div class="col-5 d-flex justify-content-center">
+                      <img src="assets/1.png" class="img-fluid align-self-center" alt="Numero 1">
+                    </div>
+                    <div class="col-7">
+                      <div class="card-body">
+                        <h5 class="card-title text-center pt-3" style="min-height: 96px;">Trazendo modernidade a sua empresa</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-6"> 
+
+                <div class="card mb-5 me-5 shadow" style="border-left: .5rem var(--verde-escuro) solid;">
+                  <div class="row g-0">
+                    <div class="col-5 d-flex justify-content-center">
+                      <img src="assets/2.png" class="img-fluid align-self-center" alt="Numero 2">
+                    </div>
+                    <div class="col-7">
+                      <div class="card-body" >
+                        <h5 class="card-title text-center" style="min-height: 96px;">Assegurando melhora na gestão do seu negócio</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+            </div>
+            </div>
+            <div class="col-12 d-flex gap-5">
+              <div class="col-6"> 
+
+                <div class="card mb-5 ms-5 shadow" style="border-left: .5rem var(--verde-escuro) solid;">
+                  <div class="row g-0">
+                    <div class="col-5 d-flex justify-content-center">
+                      <img src="assets/3.png" class="img-fluid align-self-center" alt="Numero 3">
+                    </div>
+                    <div class="col-7">
+                      <div class="card-body">
+                        <h5 class="card-title text-center"  style="min-height: 96px;">Inovando a forma de lidar com seus negócios</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+            </div>
+            <div class="col-6"> 
+
+              <div class="card mb-5 me-5 shadow" style="border-left: .5rem var(--verde-escuro) solid;">
+                <div class="row g-0">
+                  <div class="col-5 d-flex justify-content-center">
+                    <img src="assets/4.png" class="img-fluid align-self-center" alt="Numero 4">
+                  </div>
+                  <div class="col-7">
+                    <div class="card-body">
+                      <h5 class="card-title text-center pt-4" style="min-height: 96px;">Economizando seu tempo</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+            </div>
           </div>
         </div>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+    </section>
+  </main>
+
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script src="script.js"></script>
 </body>
 </html>
