--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 <body class="bg-body-tertiar" data-bs-theme="light" style="font-family: 'Readex Pro', sans-serif;">
-  <nav class="navbar bg-body-tertiary fixed-top navbar-expand-xl px-5-md px-1">
+  <nav id="nav" class="navbar bg-body-tertiary fixed-top navbar-expand-xl px-5-md px-1">
     <div class="container-fluid px-5">
       <a class="navbar-brand d-flex align-items-center p-2 px-5-md px-1" href="#"><img src="./assets/AskyuLogo.png" alt="Logo Askyu" width="100px"><p class="align-items-center my-auto">Askyu<br>Consultoria</p></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-5">
             <li class="nav-item">
-              <a class="nav-link fs-5" aria-current="page" href="#">Home</a>
+              <a class="nav-link fs-5" aria-current="page" href="#banner">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#sobre-nos">Sobre Nós</a>
+              <a class="nav-link fs-5" href="#estrategia">Sobre Nós</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#fale-conosco">Fale Conosco</a>
+              <a class="nav-link fs-5" href="#footer">Fale Conosco</a>
             </li>
             <li class="nav-item">
               <div class="nav-link fs-6 form-check form-switch mx-2">
@@ -46,7 +46,7 @@
     </div>
   </nav>
   <main>
-    <section class="banners banner-1 d-flex flex-column justify-content-start" style="margin-top: 110px ;">
+    <section id="banner" class="banners banner-1 d-flex flex-column justify-content-start" style="margin-top: 110px ;">
       <div class="align-self-start banners-titulo px-5 d-flex flex-column" style="--bs-bg-opacity: .2;">
         <h5 class="align-self-start" style="color: var(--roxo)">Seja bem vindo</h5>
         <h2 class="fw-bold fs-1 text" style="max-width: 400px; text-align: start;">Transforme sua experiência digital </h2>
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <section class="d-flex flex-column justify-content-start" style="padding-top: 5rem ;">
+    <section id="estrategia" class="d-flex flex-column justify-content-start section-green" style="padding-top: 5rem; padding-bottom: 5rem;">
       <div>
       </div>
       <div>
@@ -65,7 +65,7 @@
         <div class="d-flex">
           <div class="col-5 ps-5 "><img class="img-fluid" src="assets/people_1.png"></div>
           <div class="d-flex flex-column gap-3 col-7 pe-3">
-            <div class="col-12 d-flex p-4 ms-2 me-2 shadow" style="background-color: var(--verde-escuro);border-radius: 10px; color: white;">Queremos te guiar pela jornada da tecnologia, revelando seu potencial transformador para impulsionar seu sucesso</div>
+            <div class="col-12 d-flex p-4 ms-2 me-2 shadow" style="background-color: var(--verde-escuro);border-radius: 10px; color: var(--branco);">Queremos te guiar pela jornada da tecnologia, revelando seu potencial transformador para impulsionar seu sucesso</div>
             <div class="col-12 d-flex gap-5">
               <div class="col-6 align-items-center">
               
@@ -138,6 +138,89 @@
         </div>
       </div>
     </section>
+
+    <section id="nossoProjeto" class="section-green2 d-flex flex-column" style="padding-top: 5rem; padding-bottom: 3rem;">
+      <div class="mx-5 d-flex">
+        <div class="col-6  my-3 mx-3 d-flex flex-column row-gap-4">
+        <h2 class="fs-1 fw-bold"  style="color: var(--verde-escuro)">Conheça nosso Projeto</h2>
+        <h4 class="fs-3 col-11 fw-semibold">Contribuimos para o oitavo objetivo da ONU</h4>
+        <p class="fs-3">Estamos firmemente dedicados a criar um impacto positivo através da promoção do trabalho digno e do crescimento econômico inclusivo</p>
+      </div>
+      <div class="col-6">
+        <img src="assets/people_2.png" class="img-fluid"/>
+      </div>
+    </div>
+    <div  class="mx-5 d-flex flex-column">
+    <h3 class="mx-3 fs-2 fw-bold" style="color: var(--roxo);">Como fazemos a diferença?</h3>
+        <div class="d-flex flex-column gap-3">
+          <p class="fs-3 text-end fw-light" style="margin-top: 2rem; margin-right: 12rem;">&rarr; Compreendendo as necessidades daqueles que buscam soluções</p>
+          <p class="fs-3 text-end fw-light" style="margin-right: 12rem;">&rarr; Utilizando a tecnologia como uma ferramenta poderosa</p>
+          <p class="fs-3 text-end fw-light" style="margin-right: 12rem;">&rarr; Promovendo o Empreendedorismo</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="solucoes" class="d-flex gap-5 section-green" style="padding-top: 10rem;">
+      <div class="ms-5 d-flex gap-5 col-7" style="padding-bottom: 5rem;">
+        <img class="img-fluid" src="assets/AskyuLogo.png" alt="">
+      </div>
+      <div class="me-5 d-flex gap-5" style="padding-bottom: 10rem;">
+      <div class="d-flex flex-column gap-5">
+        <div class="d-flex flex-column gap-4">
+          <h1 class="fw-semibold fs-1" style="color: var(--roxo);">Nossas Soluções</h1>
+          <p class="fs-4">Um de nossos produtos é o software Gestio, uma ferramenta de gestão e organização de eventos e clientes.</p>
+        </div>
+        <div class="d-flex flex-column gap-4">
+          <h4 class="fw-semibold fs-4" style="color: var(--verde-escuro);">Entre as nossas funcionalidades, temos:</h4>
+          <ul class="fs-5">
+            <li>Calendário;</li>
+            <li>Listagem dos eventos;</li>
+            <li>Importação/exportação de clientes;</li>
+            <li>Relatórios de faturamento e produtividade.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </section>
+
+    <section id="footer" style="background-color: var(--verde-claro);">
+      <div style="padding: 8rem; padding-bottom: 2rem;">
+      <div class="d-flex">
+        <div class="col-4 d-flex align-items-center">
+          <h3 class="fw-light col-3 d-flex gap-3"><img id="logoFooter" src="assets/AskyuLogoBranco.png" class="img-fluid" style="height: 4.5rem;"/> Askyu Consultoria</h3>
+        </div>
+        <div class="col-4 pe-5" style="border-right: var(--branco) solid 1px;">
+          <form class="d-flex flex-column gap-3">
+            <div class="d-flex flex-column gap-2">
+              <label id="faleconosco" style="color: var(--branco)" class="fs-3">Fale Conosco:</label>
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control rounded" id="floatingInput" placeholder="nome@examplo.com">
+              <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating">
+              <textarea class="form-control rounded"  placeholder="Deixe sua mensagem aqui" id="floatingTextarea"></textarea>
+              <label for="floatingTextarea">Mensagem</label>
+            </div>
+          </div>
+            <div class="d-flex justify-content-end">
+            <button id="botton-form" class="btn btn-primary rounded-pill shadow-lg fw-light" style="color: var(--verde-escuro); background-color: var(--branco); border: var(--verde);">Enviar Mensagem</button>
+          </div>
+          </form>
+        </div>
+        <div class="col-4 d-flex align-items-center gap-1" style="padding: 6rem;">
+          <a href="https://www.youtube.com"><img src="assets/YoutubeIco.png" alt="Icone do Youtube com link" style="height: 2.5rem;"></a>
+          <a href="https://www.github.com"><img src="assets/githubIco.png" alt="Icone do Github com link" style="height: 2.5rem;"></a>
+          <a href="https://www.instagram.com"><img src="assets/InstagramIco.png" alt="Icone do Instagram com link" style="height: 2.5rem;"></a>
+          <a href="https://www.facebook.com"><img src="assets/facebookIco.png" alt="Icone do Facebook com link" style="height: 2.5rem;"></a>
+        </div>
+        
+      </div>
+      <div class="" style="padding-top: 5rem;">
+          <p class="text-center"><img id="logoOnu" src="assets/onu_logo_dark.png" style="height: 3rem;"/> © 2024 Gestio, Inc. Todos os direitos são reservados.</p>
+      </div>
+    </div>
+    </section>
+
   </main>
 
 
