feat(Primeiro Deploy): Site preparado para ser aprensentado sua versão 1.0.0

--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,10 @@
   </nav>
   <main>
     <section id="banner" class="banners banner-1 d-flex flex-column justify-content-start" style="margin-top: 110px ;">
-      <div class="align-self-start banners-titulo px-5 d-flex flex-column" style="--bs-bg-opacity: .2;">
-        <h5 class="align-self-start" style="color: var(--roxo)">Seja bem vindo</h5>
-        <h2 class="fw-bold fs-1 text" style="max-width: 400px; text-align: start;">Transforme sua experiência digital </h2>
-        <h5 class="fs-3 text align-self-start" style="max-width: 300px; color:var(--verde); text-align:start">e simplifique seu sucesso</h5>
+      <div class="align-self-start banners-titulo px-5 d-flex flex-column" style="--bs-bg-opacity: .2; margin-top: 2rem;">
+        <h5 class="align-self-start" style="color: var(--roxo); font-size: 30px;">Seja bem vindo</h5>
+        <h2 class="fw-bold text" style="max-width: 400px; text-align: start; font-size: 50px;">Transforme sua experiência digital </h2>
+        <h5 class="text align-self-start" style="max-width: 300px; color:var(--verde-escuro); text-align:start;  font-size: 30px;">e simplifique seu sucesso</h5>
       </div>
     </section>
 
@@ -162,7 +162,7 @@
 
     <section id="solucoes" class="d-flex gap-5 section-green" style="padding-top: 10rem;">
       <div class="ms-5 d-flex gap-5 col-7" style="padding-bottom: 5rem;">
-        <img class="img-fluid" src="assets/AskyuLogo.png" alt="">
+        <img class="img-fluid" src="assets/nossassolucoes.png" alt="">
       </div>
       <div class="me-5 d-flex gap-5" style="padding-bottom: 10rem;">
       <div class="d-flex flex-column gap-5">
